nginx-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service1
  namespace: ingress-nginx
  labels:
    run: nginx-service1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx1
