nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  namespace: ingress-nginx
  labels:
    run: nginx-service2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx2
