nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-check
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gobinda.com.bd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service1
                port:
                  number: 80
          - path: /nginx2
            pathType: Prefix
            backend:
              service:
                name: nginx-service2
                port:
                  number: 80

~~~
here - path: / nginx2 will not work by default, because nginx default extention is index.html, if we set nginx2.html insted of index.html then will work .  
~~~
